force-app/main/default/objects/Website_Data__c/Website_Data__c.object-meta.xml
<CustomObject>
    <label>Website Data</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Data Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Data Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>