force-app/main/default/objects/Website_Data__c/fields/Code_Examples__c.field-meta.xml
<CustomField>
    <fullName>Code_Examples__c</fullName>
    <label>Code Examples</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>