force-app/main/default/objects/Website_Data__c/fields/Scraped_Date__c.field-meta.xml
<CustomField>
    <fullName>Scraped_Date__c</fullName>
    <label>Scraped Date</label>
    <type>DateTime</type>
</CustomField>