force-app/main/default/objects/Website_Data__c/fields/Word_Count__c.field-meta.xml
<CustomField>
    <fullName>Word_Count__c</fullName>
    <label>Word Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>